<resources>
    <string name="app_name">Dudu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="tipo">Tipo</string>
    <string name="raca">Raça</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cor">Cor</string>
    <string name="foto">Foto</string>
    <string name="foto_descricao_dudu">Foto de Dudu</string>
    <string name="foto_descricao_mel">Foto de Mel</string>
    <string name="mel">Mel</string>
    <string name="meus_pets">Meus Pets</string>
    <string name="configuracoes">Configurações</string>
    <string name="importar">Importar</string>
    <string name="exportar">Exportar</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entre_com_facebook">Entre com o Facebook</string>
    <string name="entre_com_google">Entre com o Google</string>
    <string name="confirme_senha">Confirme a Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="medicamento">Medicamento</string>
    <string name="vacinas">Vacinas</string>
    <string name="detalhes">Detalhes</string>
    <string name="data_inicio_tratamento">Data Início Tratamento</string>
    <string name="data_fim_tratamento">Data Fim Tratamento</string>
    <string name="nome_medicamento">Nome Medicamento</string>
    <string name="tipo_medicamento">Tipo Medicamento</string>
    <string name="tipo_aplicacao">Tipo Aplicação</string>
    <string name="vacina">Vacina</string>
    <string name="nome_da_vacina">Nome da Vacina</string>
    <string name="data_vacinacao">Data de Vacinação</string>
    <string name="data_revacinacao">Data de Revacinação</string>
    <string name="cadastro_medicamento">Cadastro Medicamento</string>
    <string name="icone_medicamento">Icone de medicamento</string>
    <string name="cadastro_vacinas">Cadastro Vacina</string>
    <string name="icone_vacinas">Icone de Vacinas</string>
    <string name="icone_logo">Logo da Aplicação</string>
    <string name="cadastro_pet">Cadastro Pet</string>
    <string name="nome_do_medicamento">Nome do Medicamento</string>
    <string name="data_inicio">Data Início</string>
    <string name="data_fim">Data Fim</string>
    <string name="medicamento_01">Medicamento 01</string>
    <string name="_01_01_2019">01/01/2019</string>
    <string name="_01_02_2019">01/02/2019</string>
    <string name="medicamento_02">Medicamento 02</string>
    <string name="_08_08_2018">08/08/2018</string>
    <string name="_12_12_2019">12/12/2019</string>
    <string name="medicamento_03">Medicamento 03</string>
    <string name="_01_01_2018">01/01/2018</string>
    <string name="_03_03_2018">03/03/2018</string>
    <string name="vacina_01">Vacina 01</string>
    <string name="vacina_02">Vacina 02</string>
    <string name="vacina_03">Vacina 03</string>
    <string name="vacina_04">Vacina 04</string>
    <string name="vacina_05">Vacina 05</string>
    <string name="vacina_06">Vacina 06</string>
    <string name="medicamento_04">Medicamento 04</string>
    <string name="medicamento_05">Medicamento 05</string>
    <string name="medicamento_06">Medicamento 06</string>
</resources>
