<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        tools:context=".DetalharFragmentActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="300dp"
                           android:scaleType="centerCrop"
                           android:background="@drawable/dudu"
                           android:contentDescription="@string/foto_descricao_dudu"/>

                <TextView android:text="@string/app_name"
                          android:textSize="40sp"
                          android:textStyle="bold"
                          android:textColor="@color/blue"
                          android:layout_marginStart="3dp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="3dp"
                      android:layout_marginRight="3dp"
                      android:layout_marginTop="20dp"
                      android:orientation="vertical">

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content">

                <LinearLayout android:orientation="vertical"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content">

                    <TextView android:text="@string/medicamentos"
                              android:textSize="30sp"
                              android:textColor="@color/blue"
                              android:layout_marginStart="3dp"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"/>

                    <View android:layout_marginTop="10dp"
                          android:layout_marginBottom="10dp"
                          android:layout_width="fill_parent"
                          android:layout_height="1dp"
                          android:background="#c0c0c0"/>

                    <TableLayout android:stretchColumns="0,1"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/nome_do_medicamento" android:textStyle="bold" android:layout_column="0"/>
                            <TextView android:text="@string/data_inicio" android:textStyle="bold" android:layout_column="1"/>
                            <TextView android:text="@string/data_fim" android:textStyle="bold" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/medicamento_01" android:layout_column="0"/>
                            <TextView android:text="@string/_01_01_2019" android:layout_column="1"/>
                            <TextView android:text="@string/_01_02_2019" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/medicamento_02" android:layout_column="0"/>
                            <TextView android:text="@string/_08_08_2018" android:layout_column="1"/>
                            <TextView android:text="@string/_12_12_2019" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/medicamento_03" android:layout_column="0"/>
                            <TextView android:text="@string/_01_01_2018" android:layout_column="1"/>
                            <TextView android:text="@string/_03_03_2018" android:layout_column="2"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_marginTop="20dp"
                                                android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                    <TextView android:text="@string/vacinas"
                              android:textSize="30sp"
                              android:textColor="@color/blue"
                              android:layout_marginStart="3dp"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"/>

                    <View android:layout_marginTop="10dp"
                          android:layout_marginBottom="10dp"
                          android:layout_width="fill_parent"
                          android:layout_height="1dp"
                          android:background="#c0c0c0"/>

                    <TableLayout android:stretchColumns="0,1"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/nome_da_vacina" android:textStyle="bold" android:layout_column="0"/>
                            <TextView android:text="@string/data_vacinacao" android:textStyle="bold" android:layout_column="1"/>
                            <TextView android:text="@string/data_revacinacao" android:textStyle="bold" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/vacina_01" android:layout_column="0"/>
                            <TextView android:text="@string/_01_01_2019" android:layout_column="1"/>
                            <TextView android:text="@string/_01_02_2019" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/vacina_02" android:layout_column="0"/>
                            <TextView android:text="@string/_08_08_2018" android:layout_column="1"/>
                            <TextView android:text="@string/_12_12_2019" android:layout_column="2"/>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                                  android:layout_height="wrap_content">
                            <TextView android:text="@string/vacina_03" android:layout_column="0"/>
                            <TextView android:text="@string/_01_01_2018" android:layout_column="1"/>
                            <TextView android:text="@string/_03_03_2018" android:layout_column="2"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>