<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CadatroContaActivity"
        android:padding="8dp">

    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
                      android:layout_marginTop="10dp"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <LinearLayout android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="20dp"
                          android:gravity="center"
                          android:background="@color/blue">

                <ImageView android:layout_marginTop="28dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginBottom="15dp"
                           android:background="@drawable/logo"/>
            </LinearLayout>

            <EditText android:hint="@string/nome"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

            <EditText android:hint="@string/email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:ems="10"/>

            <EditText android:hint="@string/senha"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:ems="10"/>

            <EditText android:hint="@string/confirme_senha"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:ems="10"/>

            <Button android:text="@string/cadastrar"
                    android:onClick="redirecionarTelaListarPetsDaTelaDeCadastro"
                    android:backgroundTint="@color/background"
                    android:drawableStart="@drawable/check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button android:text="@string/cancelar"
                    android:onClick="redirecionarTelaListarPetsDaTelaDeCadastro"
                    android:backgroundTint="@color/background"
                    android:drawableStart="@drawable/excluir_vermelho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>