<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        android:padding="8dp">

    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="match_parent">

        <!--<LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:background="@color/blue">

            <ImageView android:layout_marginTop="28dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="15dp"
                       android:background="@drawable/logo"/>
        </LinearLayout>-->


        <LinearLayout android:orientation="vertical"
                      android:layout_marginTop="10dp"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <ImageView android:layout_marginTop="28dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="15dp"
                       android:background="@drawable/logo"/>

            <EditText android:hint="@string/email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:ems="10"/>

            <EditText android:hint="@string/senha"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:ems="10"/>

            <Button android:text="@string/login"
                    android:onClick="redirecionarListarPets"
                    android:backgroundTint="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button android:text="@string/cadastro"
                    android:onClick="redirecionarCadastroDeLogin"
                    android:backgroundTint="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:layout_width="fill_parent"
                  android:layout_height="1dp"
                  android:background="#c0c0c0"/>

            <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="redirecionarListarPets"
                    android:backgroundTint="@color/blue"
                    android:text="@string/entre_com_facebook"
                    android:drawableStart="@drawable/facebook"/>

            <Button android:text="@string/entre_com_google"
                    android:onClick="redirecionarListarPets"
                    android:drawableStart="@drawable/google_colorido"
                    android:backgroundTint="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>