<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".CadastrarPetActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingBottom="10dp"
                      android:paddingTop="10dp"
                      android:layout_marginBottom="20dp"
                      android:background="@color/blue">

            <TextView android:textSize="40sp"
                      android:textStyle="bold"
                      android:layout_gravity="center"
                      android:text="@string/cadastro_pet"
                      android:layout_weight="1"
                      android:textColor="@color/white"
                      android:layout_width="0dp"
                      android:layout_marginStart="5dp"
                      android:layout_height="wrap_content"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginEnd="10dp"
                       android:background="@drawable/casa_cachorro_grande"
                       android:contentDescription="@string/icone_logo"/>
        </LinearLayout>

        <TextView android:layout_marginStart="3dp"
                  android:text="@string/foto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardCornerRadius="8dp"
                android:elevation="10dp">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dudu"
                    android:scaleType="centerCrop" android:contentDescription="@string/foto_descricao_dudu"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView android:layout_gravity="center"
                                            android:elevation="10dp"
                                            android:layout_width="match_parent"
                                            android:layout_marginTop="10dp"
                                            android:layout_height="match_parent">

            <ScrollView android:layout_width="match_parent"
                        android:layout_height="match_parent">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/tipo"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nome"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/raca"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cor"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sexo"/>

                    <RadioGroup
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp" android:layout_weight="1">

                        <RadioButton android:id="@+id/radioButton2"
                                     android:text="@string/masculino"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"/>

                        <RadioButton android:id="@+id/radioButton"
                                     android:text="@string/feminino"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"/>
                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="bottom|end"
                  android:layout_margin="@dimen/fab_margin"
                  android:orientation="vertical"
                  app:layout_dodgeInsetEdges="bottom"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/bt_new_pet_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/red"
                android:src="@drawable/excluir"
                android:onClick="listPets"/>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/bt_new_pet_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/salvar"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="listPets"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>